# ch-tools

./: .flake8  .gitignore  .pylintrc  AUTHORS  CONTRIBUTING.md  Dockerfile  Dockerfile-deb-build  Makefile  README.md  SCHEMA_DIFF_EXAMPLES.md  build_deb.sh  pkg.json  pkg_arm.json  pyproject.toml  requirements-dev.txt  requirements-dev.txt.in  requirements.txt  requirements.txt.in  setup.py  version.txt  ya.make
.github/actions/setup_dependencies/: action.yml
.github/workflows/: ext_run_test_integration.yml  link_startrek.yml  release.yml  test_clickhouse_version.yml  update_base_images.yml  workflow.yml
access_migrate/: keeper.py  main.py  ya.make
access_migrate/cli/: __init__.py  local_to_replicated.py  replicated_to_local.py
ch_tools/: __init__.py
ch_tools/chadmin/: chadmin_cli.py  logging.py
ch_tools/chadmin/cli/: __init__.py  ch_s3_credentials_group.py  chadmin_group.py  chs3_backup_group.py  config_command.py  crash_log_group.py  data_store_group.py  database_group.py  database_metadata.py  dictionary_group.py  disk_group.py  flamegraph_group.py  list_async_metrics_command.py  list_events_command.py  list_functions_command.py  list_macros_command.py  list_metrics_command.py  list_settings_command.py  merge_group.py  metadata.py  move_group.py  mutation_group.py  object_storage_group.py  part_group.py  part_log_group.py  partition_group.py  perfomance_diagnoctics_group.py  process_group.py  query_log_group.py  replica_group.py  replicated_fetch_group.py  replication_queue_group.py  restore_replica_command.py  s3_credentials_config_group.py  server_group.py  stack_trace_command.py  table_group.py  table_metadata.py  table_metadata_parser.py  thread_log_group.py  (+4 more)
ch_tools/chadmin/internal/: backup.py  clickhouse_disks.py  database.py  database_migration.py  database_replica.py  deduplicate.py  dictionary.py  dictionary_migration.py  migration.py  part.py  partition.py  process.py  schema_comparison.py  schema_formatters.py  system.py  table.py  table_info.py  table_metadata.py  table_metadata_manager.py  table_metadata_parser.py  table_replica.py  table_schema_diff.py  utils.py  zero_copy.py  zookeeper.py  (+1 more)
ch_tools/common/: backup.py  config.py  dbaas.py  logging.py  process_pool.py  replication_lag.py  result.py  tls.py  utils.py  yaml.py
ch_tools/monrun_checks/: README.md  ch_backup.py  ch_core_dumps.py  ch_dist_tables.py  ch_geobase.py  ch_keeper.py  ch_log_errors.py  ch_orphaned_objects.py  ch_ping.py  ch_replication_lag.py  ch_replication_sync.py  ch_resetup_state.py  ch_ro_replica.py  ch_s3_backup_orphaned.py  ch_s3_credentials_config.py  ch_system_metrics.py  ch_system_queues.py  ch_tcp_mem.py  ch_tls.py  clickhouse_client.py  clickhouse_info.py  dns.py  exceptions.py  ext_ip_dns.py  logging.py  main.py  status.py  utils.py
ch_tools/monrun_checks_keeper/: keeper_commands.py  main.py  status.py
ch_tools/s3_credentials/: README.md  main.py
chadmin/: README.md  chadmin.py  chadmin_cli.py  requirements.txt  ya.make
chadmin/cli/: __init__.py  access_migration_group.py  async_metrics.py  chs3_backup.py  chs3_backup_group.py  config.py  config_command.py  crash_log.py  crash_log_group.py  data_store_group.py  database_group.py  databases.py  diagnostics_command.py  dictionaries.py  dictionary_group.py  disk_group.py  disks.py  events.py  functions.py  list_async_metrics_command.py  list_events_command.py  list_functions_command.py  list_macros_command.py  list_metrics_command.py  list_settings_command.py  macros.py  merge_group.py  metrics.py  mutation_group.py  mutations.py  object_storage_group.py  part_group.py  part_log.py  part_log_group.py  partition_group.py  partitions.py  parts.py  process.py  process_group.py  query_log.py  (+21 more)
chadmin/internal/: backup.py  dictionary.py  part.py  partition.py  process.py  system.py  table.py  table_replica.py  utils.py  zookeeper.py
chadmin/lib/: __init__.py
common/: backup.py  clickhouse.py  dbaas.py  utils.py  ya.make
common/cli/: formatting.py  parameters.py  progress_bar.py  yaml.py
debian/: .gitignore  changelog  control  copyright  debhelper-build-stamp  rules
diagnostics/: main.py  ya.make
monrun_checks/: README.md  ch_backup.py  ch_core_dumps.py  ch_dist_tables.py  ch_geobase.py  ch_keeper.py  ch_log_errors.py  ch_ping.py  ch_replication_lag.py  ch_resetup_state.py  ch_ro_replica.py  ch_s3_backup_orphaned.py  ch_system_queues.py  ch_tls.py  clickhouse-monitoring.logrotate  clickhouse_client.py  clickhouse_info.py  completion.bash  exceptions.py  ext_ip_dns.py  main.py  result.py  status.py  ya.make
monrun_checks_keeper/: README.md  completion.bash  keeper-monitoring.logrotate  keeper_commands.py  main.py  status.py  ya.make
resetup/: main.py  ya.make
resources/completion/: keeper-monitoring-completion.bash
resources/logrotate/: clickhouse-monitoring.logrotate
s3_credentials/: main.py  ya.make
src/chtools/: ya.make
tests/: .arcignore  Makefile  all.featureset  bake.hcl  configuration.py  env_control.py  environment.py  requirements.in.txt  requirements.txt
tests/features/: chadmin.feature  chadmin_access_storage.feature  chadmin_dictionary_migration.feature  chadmin_part.feature  chadmin_part_recovery.feature  chadmin_partitions.feature  chadmin_perf_diag.feature  chadmin_replica.feature  chadmin_server.feature  chadmin_zero_copy.feature  chadmin_zookeeper.feature  chs3_backup_cleanup.feature  data_storage_group.feature  database_migrate.feature  database_restore_replica.feature  drop_detached_table.feature  migrate.feature  migrate_engine.feature  monrun.feature  monrun_keeper.feature  monrun_keeper_tls.feature  object_storage.feature  resetup.feature  s3_credentials.feature  table_change_uuid.feature  table_delete.feature  table_migrate.feature  table_schema_diff.feature
tests/modules/: chadmin.py  clickhouse.py  compose.py  docker.py  logs.py  minio.py  s3.py  templates.py  typing.py  utils.py
tests/steps/: chadmin.py  clickhouse.py  common.py  failure_mockers.py  s3.py  zookeeper.py
tests/unit/: ya.make
zero_copy_schema_converter/: ya.make  zero_copy_schema_converter.py
(+319 files in other folders)
