[project]
name = "clickhouse-tools"
description = "clickhouse-tools is a set of tools for administration and diagnostics of ClickHouse DBMS."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yandex/ch-tools"
repository = "https://github.com/yandex/ch-tools"
dynamic = ["version"]
requires-python = ">=3.8"
keywords = [
    "clickhouse",
    "database",
    "monitoring",
    "diagnostics",
    "administration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Typing :: Typed",
]
authors = [
    { name = "Alexander Burmak", email = "alex-burmak@yandex-team.ru" },
    { name = "Dmitry Starov", email = "dstaroff@yandex-team.ru" },
    { name = "Anton Ivashkin", email = "iantonspb@yandex-team.ru" },
    { name = "Grigorii Pervakov", email = "pervakovg@yandex-team.ru" },
    { name = "Petr Nuzhnov", email = "petrnuzhnov@yandex-team.ru" },
    { name = "Egor Medvedev", email = "egor-medvedev@yandex-team.ru" },
    { name = "Aleksei Filatov", email = "alexfvk@yandex-team.ru" },
    { name = "Evgeny Dyukov", email = "secwall@yandex-team.ru" },
    { name = "Evgeny Strizhnev", email = "estrizhnev@yandex-team.ru" },
    { name = "Vadim Volodin", email = "vadim-volodin@yandex-team.ru" },
    { name = "Anton Chaporgin", email = "chapson@yandex-team.ru" },
    { name = "Evgenii Kopanev", email = "ekopanev@yandex-team.ru" },
    { name = "Mikhail Kot", email = "myrrc@yandex-team.ru" },
    { name = "Mikhail Burdukov", email = "mburdukov@yandex-team.ru" },
    { name = "Kirill Garbar", email = "kirillgarbar@yandex-team.ru" },
    { name = "Konstantin Morozov", email = "kst-morozov@yandex-team.ru" },
]
maintainers = [
    { name = "Alexander Burmak", email = "alex-burmak@yandex-team.ru" },
    { name = "Egor Medvedev", email = "egor-medvedev@yandex-team.ru" },
    { name = "Aleksei Filatov", email = "alexfvk@yandex-team.ru" },
    { name = "Mikhail Burdukov", email = "mburdukov@yandex-team.ru" },
    { name = "Kirill Garbar", email = "kirillgarbar@yandex-team.ru" },
    { name = "Konstantin Morozov", email = "kst-morozov@yandex-team.ru" },
]
dependencies = [
    "boto3 ~= 1.23.10",
    "click ~= 8.0.4",
    "cloup",
    "deepdiff < 6.4.0",
    "dnspython",
    "file_read_backwards",
    "humanfriendly",
    "jinja2",
    "kazoo",
    "lxml",
    "psutil",
    "pygments",
    "pyopenssl < 25.0",
    "python-dateutil",
    "pyyaml < 5.4",
    "requests < 2.30",
    "tabulate",
    "tenacity",
    "termcolor",
    "tqdm",
    "typing-extensions ~= 4.1",
    "xmltodict",
    "loguru",
    "cffi == 1.16.0 ; python_version >= '3.12'",
    "setuptools ; python_version >= '3.12'",
]

[dependency-groups]
dev = [
    "behave",
    "docker < 8.0",
    "docker-compose < 1.29 ; python_version < '3.13'",
    "pyhamcrest",
    "pytest",
    "pyfakefs ; python_version < '3.12'",
    "pyfakefs == 5.5.0 ; python_version >= '3.12'",
    "black ~= 22.0 ; python_version >= '3.10'",
    "ruff ; python_version >= '3.10'",
    "isort ~= 6.0 ; python_version >= '3.10'",
    "mypy >= 1.5, < 1.6 ; python_version >= '3.10'",
    "pylint ~= 3.1 ; python_version >= '3.10'",
    "types-pyOpenSSL ; python_version >= '3.10'",
    "types-python-dateutil ; python_version >= '3.10'",
    "types-pyyaml ; python_version >= '3.10'",
    "types-requests ; python_version >= '3.10'",
    "types-setuptools ; python_version >= '3.10'",
    "types-tabulate ; python_version >= '3.10'",
    "codespell ; python_version >= '3.10'",
    "tomli ; python_version >= '3.10'",
]

[project.scripts]
chadmin = "ch_tools.chadmin.chadmin_cli:main"
ch-monitoring = "ch_tools.monrun_checks.main:main"
keeper-monitoring = "ch_tools.monrun_checks_keeper.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ch_tools/version.txt"
pattern = "(?P<version>.+)"

[tool.hatch.build]
ignore-vcs = true  # to prevent excluding generated files
only-include = ["ch_tools", "resources"]

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = ["E", "F", "W", "A"]
lint.ignore = [
    "A003",  # "Class attribute is shadowing a Python builtin"
    "E402",  # "Module level import not at top of file", duplicate corresponding pylint check
    "E501",  # "Line too long"
    "A005",  # Module `logging` shadows a Python standard-library module
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # "Unused import"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
disallow_incomplete_defs = true
check_untyped_defs = true
exclude = ['tests/staging']

[tool.codespell]
ignore-words-list = 'sav,fpr'  # `fpr` is used in parsing GPG output
